--- a/projeto-integrador/src/main/resources/templates/login.html
+++ b/projeto-integrador/src/main/resources/templates/login.html
@@ -14,17 +14,16 @@
       <form class="form-signin" method="post" th:action="@{/login}">
         <h2 class="form-signin-heading">Login</h2>
         <p>
-          <label for="username" class="sr-only">Nome de Usuario</label>
+          <label for="username" class="sr-only">User Name</label>
           <input type="text" id="username" name="username" class="form-control" placeholder="Nome de usuario" required autofocus>
         </p>
         <p>
-          <label for="password" class="sr-only">Senha</label>
+          <label for="password" class="sr-only">Password</label>
           <input type="password" id="password" name="password" class="form-control" placeholder="Senha" required>
         </p>
 <input name="_csrf" type="hidden" value="ea80c7c5-6933-4691-9743-438f266e3f00" />
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-        <a class="nav-link" th:href="@{/forgot_password}">Esqueci minha senha</a>
-        <a class="nav-link" th:href="@{/index}">Voltar</a>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Enter</button>
+        <a class="nav-link" th:href="@{/index}">Return</a>
       </form>
 </div>
 </body></html>
