--- a/projeto-integrador/src/main/resources/templates/add_curso.html
+++ b/projeto-integrador/src/main/resources/templates/add_curso.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title> Add curso- Beyond Learning</title>
+        <title> Add Course- Beyond Learning</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -23,6 +23,24 @@
 	href="/webjars/bootstrap/css/bootstrap.min.css" />
 	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+	<style>
+		body {
+    		margin: 0;
+    		font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    		font-size: 1rem;
+    		font-weight: 400;
+   		 	line-height: 1.5;
+   		 	color: #212529;
+    		text-align: left;
+    		background-color: #fff;
+    		margin-top: -24px;
+		}
+		
+		.h3, h3 {
+   			margin-top: 20px;
+    		font-size: 1.75rem;
+		}
+	</style>
 </head>
 <input type="checkbox" id="check">
         <label for="check">
@@ -30,32 +48,47 @@
             <i class="fas fa-times" id="cancel"></i>
         </label>
         <div class="sidebar">
-            <header><h3>Bem Vindo </h3><b>[[${#request.userPrincipal.principal.fullName}]]</b></header>
+            <header><h3>Welcome</h3><b>[[${#request.userPrincipal.principal.fullName}]]</b></header>
+            <a th:href = "@{/showNewUsuariosForm}">
+                <i class="fas fa-user-alt"></i>
+                <span>Add User</span>  
+            </a>
+            <a th:href="@{/users}">
+                <i class="fas fa-stream"></i>
+                <span>User List</span>
+            </a>
            <a th:href = "@{/showNewCursoForm}">
                 <i class="far fa-plus-square"></i>
-                <span>Add Curso</span>  
+                <span>Add Course</span>  
             </a>
             <a th:href = "@{/cursos}">
                 <i class="fas fa-stream"></i>
-                <span>Visão Geral</span>
+                <span>Course List</span>
             </a>
-            <a href="#">
+            <a th:href = "@{/menu_cursos}">
+                <i class="fas fa-book-open"></i>
+                <span>Course Catalog</span>
+            </a>
+            <a th:href = "@{/upload}">
+                <i class="fas fa-cloud-upload-alt"></i>
+                <span>Upload</span>
+            </a>
+            <a th:href="@{/calendar}">
                 <i class="fas fa-calendar"></i>
-                <span>Eventos</span>
+                <span>Calendar</span>
             </a>
             <a th:href = "@{/}">
                 <i class="fas fa-sign-out-alt"></i>
-                <span >Sair</span>
+                <span >Leave</span>
             </a>
         </div>
-
 <body>
 <header class="masthead">
 
 
 	<div class="container text-center">
 	
-		<h2 class="text-white">Adicionar Dados do Curso</h2>
+		<h2 class="text-white">Add Course</h2>
 		<hr>
 		
 	<center>
@@ -66,23 +99,21 @@
 			<input type = "hidden" th:field="*{id}" />
 			
 			<input type="text"
-				th:field="*{categoria}" placeholder="Categoria do Curso"
+				th:field="*{categoria}" placeholder="Course Category"
+				
 				class="form-control mb-4 col-5"> <input type="text"
-				th:field="*{descricao}" placeholder="Descrição do Curso"
+				th:field="*{descricao}" placeholder="Course Description"
+				
 				class="form-control mb-4 col-5"> <input type="text"
-				th:field="*{nomecurso}" placeholder="Nome do Curso"
+				th:field="*{nomecurso}" placeholder="Course Name"
 				class="form-control mb-4 col-5">
 
 
-			<button type="submit" class="btn btn-info col-2" style="background-color:#87ceeb; border:none; margin:5px;">Salvar Dados</button>
-		</form>
-		
+			<button type="submit" class="btn btn-info col-2" style="background-color:#87ceeb; border:none; margin:5px;">Save Data</button>
+		</form>	
 		<hr>
-		</center>
-		
-	</div>
-	
-	
+		</center>		
+	</div>	
 </header>
 
 <footer class="bg-light py-5">
