--- a/projeto-integrador/src/main/resources/templates/add_usuarios.html
+++ b/projeto-integrador/src/main/resources/templates/add_usuarios.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Add user - Beyond Learning</title>
+        <title>Add User - Beyond Learning</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -41,6 +41,24 @@
     		font-size: 1.75rem;
 		}
 	</style>
+	<style>
+		body {
+    		margin: 0;
+    		font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    		font-size: 1rem;
+    		font-weight: 400;
+   		 	line-height: 1.5;
+   		 	color: #212529;
+    		text-align: left;
+    		background-color: #fff;
+    		margin-top: -24px;
+		}
+		
+		.h3, h3 {
+   			margin-top: 20px;
+    		font-size: 1.75rem;
+		}
+	</style>
 </head>
 <body>
 
@@ -50,31 +68,43 @@
             <i class="fas fa-times" id="cancel"></i>
         </label>
         <div class="sidebar">
-            <header>Bem Vindo <br><b>[[${#request.userPrincipal.principal.fullName}]]</b></header>
-            <a th:href = "@{/index}">
-                <i class="fas fa-home"></i>
-                <span >Home</span>
-            </a>
+            <header><h3>Welcome</h3><b>[[${#request.userPrincipal.principal.fullName}]]</b></header>
             <a th:href = "@{/showNewUsuariosForm}">
                 <i class="fas fa-user-alt"></i>
                 <span>Add User</span>  
             </a>
             <a th:href="@{/users}">
                 <i class="fas fa-stream"></i>
-                <span>Visão Geral</span>
+                <span>User List</span>
             </a>
-            <a href="#">
+           <a th:href = "@{/showNewCursoForm}">
+                <i class="far fa-plus-square"></i>
+                <span>Add Course</span>  
+            </a>
+            <a th:href = "@{/cursos}">
+                <i class="fas fa-stream"></i>
+                <span>Course List</span>
+            </a>
+            <a th:href = "@{/menu_cursos}">
+                <i class="fas fa-book-open"></i>
+                <span>Course Catalog</span>
+            </a>
+            <a th:href = "@{/upload}">
+                <i class="fas fa-cloud-upload-alt"></i>
+                <span>Upload</span>
+            </a>
+            <a th:href="@{/calendar}">
                 <i class="fas fa-calendar"></i>
-                <span>Eventos</span>
+                <span>Calendar</span>
             </a>
             <a th:href = "@{/}">
                 <i class="fas fa-sign-out-alt"></i>
-                <span >Sair</span>
+                <span >Leave</span>
             </a>
         </div>
 <header class="masthead">
 	<div class="container text-center">
-		<h2 class="text-white">Adicionar usuários</h2>
+		<h2 class="text-white">Add Users</h2>
 		<hr>
 		
 
@@ -84,7 +114,7 @@
 				<div class="form-group row">
 					
 					<div class="col-12">
-						<input type="email" th:field="*{email}" placeholder="Email"
+						<input type="email" th:field="*{email}" placeholder="E-mail"
 							class="form-control" required />
 					</div>
 				</div>
@@ -92,7 +122,7 @@
 				<div class="form-group row">
 					
 					<div class="col-12">
-						<input type="password" th:field="*{password}" placeholder="Senha"
+						<input type="password" th:field="*{password}" placeholder="Password"
 							class="form-control" required minlength="6" maxlength="10" />
 					</div>
 				</div>
@@ -101,7 +131,7 @@
 					
 					<div class="col-12">
 						<input type="text" th:field="*{firstName}"
-							placeholder="Primeiro nome" class="form-control" required
+							placeholder="First Name" class="form-control" required
 							minlength="2" maxlength="20" />
 					</div>
 				</div>
@@ -110,7 +140,7 @@
 					
 					<div class="col-12">
 						<input type="text" th:field="*{lastName}"
-							placeholder="Ultimo nome" class="form-control" required
+							placeholder="Last Name" class="form-control" required
 							minlength="4" maxlength="20" />
 					</div>
 				</div>
@@ -126,11 +156,11 @@
 				<div class="form-group row">
 					
 					<div class="col-12">
-						<input type="text" th:field="*{telefone}" placeholder="Telefone"
+						<input type="text" th:field="*{telefone}" placeholder="Cellphone"
 							class="form-control" required minlength="10" maxlength="20" />
 					</div>
 				</div>
-				<button type="submit" class="btn btn-info col-4" style="background-color:#87ceeb;">Salvar dados</button>
+				<button type="submit" class="btn btn-info col-4" style="background-color:#87ceeb;">Save Data</button>
 			
 			</div>
 			</form>
