--- a/projeto-integrador/src/main/resources/templates/users.html
+++ b/projeto-integrador/src/main/resources/templates/users.html
@@ -49,29 +49,40 @@
             <i class="fas fa-times" id="cancel"></i>
         </label>
         <div class="sidebar">
-            <header><h3>Bem Vindo </h3><b>[[${#request.userPrincipal.principal.fullName}]]</b></header>
-            <a th:href = "@{/index}">
-                <i class="fas fa-home"></i>
-                <span >Home</span>
-            </a>
+            <header><h3>Welcome</h3><b>[[${#request.userPrincipal.principal.fullName}]]</b></header>           
             <a th:href = "@{/showNewUsuariosForm}">
                 <i class="fas fa-user-alt"></i>
                 <span>Add User</span>  
             </a>
             <a th:href="@{/users}">
                 <i class="fas fa-stream"></i>
-                <span>Visão Geral</span>
+                <span>User List</span>
             </a>
-            <a href="#">
+           <a th:href = "@{/showNewCursoForm}">
+                <i class="far fa-plus-square"></i>
+                <span>Add Course</span>  
+            </a>
+            <a th:href = "@{/cursos}">
+                <i class="fas fa-stream"></i>
+                <span>Course List</span>
+            </a>
+            <a th:href = "@{/menu_cursos}">
+                <i class="fas fa-book-open"></i>
+                <span>Course Catalog</span>
+            </a>
+            <a th:href = "@{/upload}">
+                <i class="fas fa-cloud-upload-alt"></i>
+                <span>Upload</span>
+            </a>
+            <a th:href="@{/calendar}">
                 <i class="fas fa-calendar"></i>
-                <span>Eventos</span>
+                <span>Calendar</span>
             </a>
-            <a th:href = "@{/logout}">
+            <a th:href = "@{/}">
                 <i class="fas fa-sign-out-alt"></i>
-                <span >Sair</span>
+                <span >Leave</span>
             </a>
         </div>
-
 <header class="masthead">
 <div class="container text-center">
 	<div>
