--- a/projeto-integrador/src/main/resources/templates/index.html
+++ b/projeto-integrador/src/main/resources/templates/index.html
@@ -27,8 +27,8 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                     	<li class="nav-item"><a class="nav-link" th:href="@{/users}">Painel</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#singup">Sign up</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Sobre</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#singup">Cadastre-se</a></li>
                     </ul>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 mb-5"></p>
-                        <a class="btn btn-primary btn-xl" th:href="@{/login}">Sign in</a><br><br>
+                        <a class="btn btn-primary btn-xl" th:href="@{/login}">Entrar</a><br><br>
                     </div>
                 </div>
             </div>
