--- a/projeto-integrador/src/main/resources/templates/add_usuarios.html
+++ b/projeto-integrador/src/main/resources/templates/add_usuarios.html
@@ -69,25 +69,29 @@
         </label>
         <div class="sidebar">
             <header><h3>Welcome</h3><b>[[${#request.userPrincipal.principal.fullName}]]</b></header>
+            <a th:href = "@{/index}">
+                <i class="fas fa-home"></i>
+                <span >Home</span>
+            </a>        
             <a th:href = "@{/showNewUsuariosForm}">
                 <i class="fas fa-user-alt"></i>
                 <span>Add User</span>  
             </a>
             <a th:href="@{/users}">
                 <i class="fas fa-stream"></i>
-                <span>User List</span>
+                <span>List Users</span>
             </a>
            <a th:href = "@{/showNewCursoForm}">
                 <i class="far fa-plus-square"></i>
-                <span>Add Course</span>  
+                <span>Add Courses</span>  
             </a>
             <a th:href = "@{/cursos}">
                 <i class="fas fa-stream"></i>
-                <span>Course List</span>
+                <span>List Courses</span>
             </a>
             <a th:href = "@{/menu_cursos}">
                 <i class="fas fa-book-open"></i>
-                <span>Course Catalog</span>
+                <span>Catalog</span>
             </a>
             <a th:href = "@{/upload}">
                 <i class="fas fa-cloud-upload-alt"></i>
@@ -97,14 +101,14 @@
                 <i class="fas fa-calendar"></i>
                 <span>Calendar</span>
             </a>
-            <a th:href = "@{/}">
+            <a th:href = "@{/logout}">
                 <i class="fas fa-sign-out-alt"></i>
-                <span >Leave</span>
+                <span >Logout</span>
             </a>
         </div>
 <header class="masthead">
 	<div class="container text-center">
-		<h2 class="text-white">Add Users</h2>
+		<h2 class="text-white">Adicionar Usuários</h2>
 		<hr>
 		
 
@@ -122,7 +126,7 @@
 				<div class="form-group row">
 					
 					<div class="col-12">
-						<input type="password" th:field="*{password}" placeholder="Password"
+						<input type="password" th:field="*{password}" placeholder="Senha"
 							class="form-control" required minlength="6" maxlength="10" />
 					</div>
 				</div>
@@ -131,7 +135,7 @@
 					
 					<div class="col-12">
 						<input type="text" th:field="*{firstName}"
-							placeholder="First Name" class="form-control" required
+							placeholder="Primeiro Nome" class="form-control" required
 							minlength="2" maxlength="20" />
 					</div>
 				</div>
@@ -140,7 +144,7 @@
 					
 					<div class="col-12">
 						<input type="text" th:field="*{lastName}"
-							placeholder="Last Name" class="form-control" required
+							placeholder="Sobrenome" class="form-control" required
 							minlength="4" maxlength="20" />
 					</div>
 				</div>
@@ -156,11 +160,11 @@
 				<div class="form-group row">
 					
 					<div class="col-12">
-						<input type="text" th:field="*{telefone}" placeholder="Cellphone"
+						<input type="text" th:field="*{telefone}" placeholder="Telefone"
 							class="form-control" required minlength="10" maxlength="20" />
 					</div>
 				</div>
-				<button type="submit" class="btn btn-info col-4" style="background-color:#87ceeb;">Save Data</button>
+				<button type="submit" class="btn btn-info col-4" style="background-color:#87ceeb;">Salvar</button>
 			
 			</div>
 			</form>
